--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,9 @@
 @import "https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap";
 
-.yellow-cell {
-    background-color: #dccb3b !important;
-}
+.ag-header-cell-center .ag-header-cell-label {
+    justify-content: center;
+    text-align: center;
+  }
 
 /*
 Copyright Google LLC. All Rights Reserved.
