--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
         [columnDefs]="colDefs"
         class="ag-theme-quartz-dark"
         style="height: 100vh;"
-        [pagination]="pagination"
+        [pagination]="true"
         [paginationPageSize]="paginationPageSize"
         [paginationPageSizeSelector]="paginationPageSizeSelector"
-
 />
 
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
