Finished adding all 311 Pemons
Finished adding all 311 Pemons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ag-grid-angular
+        [enableCellTextSelection]="true"
         [rowData]="rawData"
         [columnDefs]="colDefs"
         class="ag-theme-quartz-dark"
