--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 5px 10px;
 }
 
 #customPaginationText {
@@ -28,8 +29,73 @@
   padding-left: 10px;
 }
 
-/* Global Styles */
+/* Switch Container */
+.switch-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px; /* Abstand zwischen Switch und Label */
+  height: auto;
+  max-width: 150px; /* Maximalgröße setzen */
+  margin-left: 10px;
+}
 
+/* Switch Styling */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 22px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #57ff5e;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #f74cff;
+}
+
+input:checked + .slider:before {
+  transform: translateX(18px);
+}
+
+/* Styling für den Pagination-Bereich */
+.ag-paging-panel {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+  height: auto;
+}
+
+/* Global Styles */
 * {
   font-family: 'Roboto', Arial, sans-serif;
   color: #d9d9d9;
